--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     \n\n * Please make sure nobody assists you in taking the test and that you don\'t cheat.
     \n\n * Make sure you do not cancel the app or the test at any point because you  won\'t be able to resume the test.
     \n\n * You  are advised to make sure your phone is fully charged before taking the test.
+    \n\n * Try not to minimize or close the app or else you might loose the test session.
     \n\n * Top candidates on the leader board are eligible to win awesome prices periodically.
     \n\n * We won\'t end this without saying Goodluck.</string>
 
